--- a/app/src/main/res/layout/inbox_fragment.xml
+++ b/app/src/main/res/layout/inbox_fragment.xml
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Inbox">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+<?xml version = "1.0" encoding = "utf-8"?>
+<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    android:layout_width = "match_parent"
+    android:gravity = "center"
+    android:layout_height = "match_parent">
+    <ListView
+        android:id = "@android:id/list"
+        android:layout_width = "wrap_content"
+        android:textSize = "30sp"
+        android:layout_height = "wrap_content"
+        android:text = "Click"/>
+</LinearLayout>
