--- a/app/src/main/res/layout/chat_bubble_right.xml
+++ b/app/src/main/res/layout/chat_bubble_right.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="100dp"
+    android:layout_marginStart="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -10,16 +10,16 @@
         android:layout_width="wrap_content"
         android:layout_margin="10dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/chat_left"
+        android:background="@drawable/chat_right"
         android:lineSpacingExtra="2dp"
         android:paddingStart="20dp"
         android:paddingTop="4dp"
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
-        android:text="Hi, How are you?"
+        android:text="Hi, How are you? Lcgeppete"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="wrap"
         app:layout_constraintWidth_percent="0.8" />
