--- a/app/src/main/res/drawable/chat_left.xml
+++ b/app/src/main/res/drawable/chat_left.xml
@@ -93,13 +93,13 @@
             android:toDegrees="0">
             <shape android:shape="rectangle">
                 <corners android:radius="4dp"/>
-                <solid android:color="#FFFFFF" />
+                <solid android:color="#F3F3F3" />
             </shape>
         </rotate>
     </item>
     <item android:left="8dp">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#F3F3F3" />
             <corners android:radius="8dp" />
         </shape>
     </item>
