--- a/app/src/main/res/layout/chat_bubble_right.xml
+++ b/app/src/main/res/layout/chat_bubble_right.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/chat_bubble_left"
+        android:id="@+id/chat_text"
         android:layout_width="wrap_content"
         android:layout_margin="10dp"
         android:layout_height="wrap_content"
